--- a/tmux.conf
+++ b/tmux.conf
@@ -3,8 +3,8 @@ set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
 #Keybinds
 unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
+set -g prefix C-a
+bind C-a send-prefix
 
 bind -n M-H previous-window
 bind -n M-L next-window
